* Added Norwegian Nynorsk strings provided by Alexander N. Sørnes.

--- a/extra_files/gtk-gnutella.desktop
+++ b/extra_files/gtk-gnutella.desktop
@@ -8,6 +8,7 @@ Name[hu]=Gtk-Gnutella
 Name[ja]=Gtk-Gnutella
 Name[nb]=Gtk-Gnutella
 Name[nl]=Gtk-Gnutella
+Name[nn]=Gtk-Gnutella
 Comment=A GUI based Gnutella Servent
 Comment[de]=Ein grafischer Gnutella-Servent
 Comment[fr]=Un servent Gnutella graphique
@@ -15,6 +16,7 @@ Comment[hu]=Grafikus Gnutella-kiszolgáló
 Comment[ja]=GUI ベースの Gnutella サーバントです
 Comment[nb]=En grafisk Gnutella-tjenent
 Comment[nl]=Een grafische Gnutella servent
+Comment[nn]=Ein grafisk Gnutella-tenent
 GenericName=P2P Client
 GenericName[de]=P2P-Client
 GenericName[fr]=Client P2P
@@ -22,6 +24,7 @@ GenericName[hu]=P2P Kliens
 GenericName[ja]=P2P クライアント
 GenericName[nb]=Fildelingsprogram
 GenericName[nl]=P2P programma
+GenericName[nn]=Fildelingsprogram
 TryExec=gtk-gnutella
 Exec=gtk-gnutella
 StartupNotify=false
